# llm-wiki

./: .gitignore  .gitmodules  README.md
.github/: copilot-instructions.md
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-llm-wiki-agent-rust/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-llm-wiki-agent-rust/contracts/: cli-interface.md
wiki-tool/: .gitignore  Cargo.toml  README.md
wiki-tool/schema/: AGENTS.md  CLAUDE.md  COPILOT.md  GEMINI.md
wiki-tool/src/: config.rs  lib.rs  main.rs
wiki-tool/src/cache/: ingest_cache.rs  mod.rs  queue.rs
wiki-tool/src/commands/: cache.rs  extract.rs  graph.rs  index.rs  ingest.rs  init.rs  lint.rs  mod.rs  query.rs  search.rs
wiki-tool/src/extract/: markdown.rs  mod.rs  pdf.rs  text.rs
wiki-tool/src/graph/: builder.rs  community.rs  mod.rs  relevance.rs
wiki-tool/src/llm/: client.rs  mod.rs  prompts.rs  providers.rs
wiki-tool/src/search/: engine.rs  mod.rs  tokenizer.rs
wiki-tool/src/wiki/: index.rs  log.rs  mod.rs  page.rs  wikilinks.rs
wiki-tool/tests/fixtures/raw/: attention-paper.md  ml-basics.txt  transformer-article.md
wiki-tool/tests/fixtures/wiki/concepts/: Transformer.md  transformers.md
wiki-tool/tests/fixtures/wiki/entities/: gpt.md
wiki-tool/tests/fixtures/wiki/sources/: attention-paper.md  transformer-article.md
