[package]
name = "wiki-tool"
version = "0.1.0"
edition = "2024"
description = "LLM Wiki Agent — build and maintain a personal knowledge base from source documents"
license = "MIT"
readme = "README.md"

[[bin]]
name = "wiki-tool"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Markdown
comrak = "0.36"

# Search
tantivy = "0.22"

# Graph
petgraph = "0.8"

# HTTP / Async
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"

# Hashing
sha2 = "0.10"

# PDF
pdf-extract = "0.7"

# Encoding
encoding_rs = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
regex = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
strip = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
